// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compare API components alphabetizes properties 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:Alphabetize
+Alphabetize {
+  bar: string
+  foo: string
+}

-----------------------------------
"
`;

exports[`Compare API components can add a new interface that did not previously exist 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:Foo
+Foo {
+  bar: number
+}

-----------------------------------
"
`;

exports[`Compare API components can extend other interfaces 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:SpectrumToastContainerProps
+SpectrumToastContainerProps {
+  bar: number
+}

-----------------------------------
"
`;

exports[`Compare API components can extend other interfaces with no properties 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:ComponentProps
+ComponentProps extends RefObject {
+}

-----------------------------------
"
`;

exports[`Compare API components can handle top level exported identifiers 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:theme
-theme: number
+theme: Key

-----------------------------------
"
`;

exports[`Compare API components can remove a new interface that did not previously exist 1`] = `
"
### dist/branch/@test/parcel-test-app

#### base/@test/parcel-test-app/src/index.tsx:Foo
-Foo {
-  bar: number
-}

-----------------------------------
"
`;

exports[`Compare API components compares non template to template version 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:TableColumnResizeState
-TableColumnResizeState {
+TableColumnResizeState<T> {
   getColumnMaxWidth: (Key) => number
   getColumnMinWidth: (Key) => number
   getColumnWidth: (Key) => number
-  onColumnResize: (Key, number) => void
+  onColumnResize: (Key, number) => Map<Key, number>
   onColumnResizeEnd: (Key) => void
   onColumnResizeStart: (Key) => void
+  resizingColumn: Key | null
+  tableState: TableState<T>
   widths: Map<Key, number>
 }

-----------------------------------
"
`;

exports[`Compare API components does not change parameter order 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:fooConcat
+fooConcat {
+  foo: string
+  bar: string
+  returnVal: string
+}

-----------------------------------
"
`;

exports[`Compare API components does not change type parameter order 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:ComponentProps
+ComponentProps<T, C> {
+  bar: C
+  foo: T
+}

-----------------------------------
"
`;

exports[`Compare API components handles return values 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:Bar
+Bar {
+  props: {
+    val: number
+  }
+  returnVal: null
+}

-----------------------------------
"
`;

exports[`Compare API components handles return values that are functions 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:Bar
+Bar {
+  props: {
+    val: number
+  }
+  returnVal: () => void
+}

-----------------------------------
"
`;

exports[`Compare API components writes export entry for React component 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:App1
 App1 {
-  id: string
+  id: number
 }

-----------------------------------
"
`;

exports[`Compare API interface merging merges properties when extending 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:State
+State {
+  foo: Foo
+  isValid: boolean
+}

-----------------------------------
"
`;

exports[`Compare API interface merging merges properties when extending with generics and Omit 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:SpectrumTagGroupProps
+SpectrumTagGroupProps<T> {
+  actionLabel?: string
+  errorMessage: string
+  isValid: boolean
+  node: T
+  onAction?: () => void
+}

-----------------------------------
"
`;

exports[`Compare API interface merging merges properties when extending with nested extends 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:State
+State {
+  foo: Foo
+  isValid: boolean
+  showErrorIcon: boolean
+}

-----------------------------------
"
`;

exports[`Compare API interface merging merges properties when extending with nested extends even for empty interfaces 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:State
+State {
+  foo: Foo
+  isValid: boolean
+}

-----------------------------------
"
`;

exports[`Compare API interface merging other packages merges properties when extending with generics from other modules 1`] = `
"
### dist/branch/@test/parcel-test-app

#### branch/@test/parcel-test-app/src/index.tsx:SpectrumTagGroupProps
+SpectrumTagGroupProps<T> extends AriaTagGroupProps<T> {
+  actionLabel?: string
+  description?: ReactNode
+  errorMessage?: ReactNode
+  isDisabled?: boolean
+  isRequired?: boolean
+  onAction?: () => void
+  validationState?: ValidationState
+}

-----------------------------------
"
`;
